1999-06-13  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/libdb/bsdbtree.c (and others during debug):
	    Spotted strange leakage of 'file' objects in the Linux
	    kernel.  Turns out that the BSD DB 2.x at Linux/Alpha
	    glibc-2.1.1 leaks one mmap() page at every db open.
	    Turns out also that every  search_btree()  which
	    misses, did a retry *after* close_btree() call.
	    As a result, routing did need terrible things.
	    Now won't do that db-reopen at search miss with
	    bsd-btree and bsd-hash codes.

	* scheduler/scheduler.h, scheduler/transport.c:
	    Spotted a case of 'very long' "host" information, which
	    naturally crashed the scheduler when scribling over fixed
	    buffer in the stack.  Now using malloc()ed buffers, which
	    are grown in case a need arises.
	

1999-06-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libsh/interpret.c, router/functions.c, router/rfc822.c,
	  router/libdb/bind.c:
	    Code massage to silence the egcs-1.1.2 about "possibly unset
	    variable" -- if there is any code flow before variables are
	    set, then it doesn't know, what has happened.

	* scheduler/readconfig.c, scheduler/scheduler.c:
	    Removed/moved unused variable.

	* transports/smtp/smtp.c:
	    Sigh.. "warning: variable `channel' might be clobbered
	    by `longjmp' or `vfork'"

	* utils/vacation/Makefile.in:
	    [ -l somepath ] is NOT known function, it is:  [ -h somepath ]

1999-06-10  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* README.UPGRADING:
	    Explicitely list all standard commands for different
	    database regenerations.

	* contrib/zmailstats:
	    RE change in the main syslog pattern rule to handle the
	    timestamp format at the beginning of the syslog line.

	* libsh/interpret.c:
	    Tracked memory leakage in case the script did following:
	       ssift "$somevar" in
	         (.*)@(.*)  return "$somevar" ;;
	       tfiss

	* router/functions.c:
	    "stableprocess" routine used wrong argv[] element to